[package]
name = "piwfs"
version = "0.1.0"
authors = ["Ashymad <szymon.mikulicz@posteo.net>"]
edition = "2018"

[dependencies]
rppal = "0.11"
docopt = "1"
serde = "1.0"
serde_derive = "1.0"
alsa = "0.4"
num = "0.2"
mio = "0.6"
ta = "0.1"
hound = "3.4"
samplerate = "0.2.1"
thread-priority = "0.1"
nix = "0.15"
